test/types/enum/enumCast-abstract-nonparam.good
enumCast-abstract-nonparam.chpl:7: error: cannot cast abstract enum type 'color' to 'int(64)'
